Create xml layout and logic for navigation drawer for tutor instead of its own fragment

--- a/myGuide/app/src/main/res/values/strings.xml
+++ b/myGuide/app/src/main/res/values/strings.xml
@@ -38,6 +38,9 @@
     <string name="GoBackButtonText"><![CDATA[<]]></string>
     <string name="GoBackButtonText2"><![CDATA[< Back]]></string>
 
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+
 
     <string-array name="WeekDays">
         <item>Not selected</item>
