Add toolbar, back button and polish UI for different activities and fragments

--- a/myGuide/app/src/main/res/values/strings.xml
+++ b/myGuide/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
 
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
+    <string name="YourStudents">YOUR STUDENTS</string>
 
 
     <string-array name="WeekDays">
